# hatch-fast-api

./: .containerignore  .pre-commit-config.yaml  Containerfile  LICENSE.txt  README.md  deployment.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/fibonacci_api/: __about__.py  _block.py  crud.py  main.py  types.py
tests/: __init__.py  test_crud.py
tests/api/: test_api.py  test_main.py
